Upgraded dependencies. Fixed tests. Fixed message loss warning bug.